--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,42 +1,63 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+.card{
+    background-color: white;
+    width: 20vw;
+    box-shadow: 0px 0px 1px black;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.containerCard{
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(4,0fr);
+    gap: 20px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card img{
+    width: 20vw;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.detail{
+    padding: 0% 5%;
+    font-family: 'Roboto', sans-serif;;
 }
 
-.card {
-  padding: 2em;
+.detail div{
+    display: flex;
+    align-items: center;
+    margin-bottom: 0%;
+    height: 5vh;
 }
 
-.read-the-docs {
-  color: #888;
+.detail div .par{
+    padding: 1%;
+    border-radius: 12%;
+    font-size: 75%;
+    font-weight: 600;
+}
+
+.detail div .uno{
+    background-color: orange;
+}
+
+
+.detail div .dos{
+    margin-left: 2%;
+    background-color: rgb(58, 184, 58);
+    color: white;
+}
+
+.detail div .tres{
+    background-color: red;
+    color: white;
+}
+
+.detail div .cuatro{
+    margin-left: 2%;
+    background: rgb(198,55,19);
+    background: linear-gradient(0deg, rgba(198,55,19,1) 10%, rgba(231,70,30,1) 26%, rgba(238,218,28,1) 27%, rgba(238,218,28,1) 72%, rgba(231,70,30,1) 74%, rgba(198,55,19,1) 90%);    color: black;
+}
+.detail div .cinco{
+    background-color: black;
+    color: white;
 }
